Disable screenshot option.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ UserVoice.push(['set', {
   trigger_background_color: 'rgba(46, 49, 51, 0.6)'
 }]);
 
+// Disable screenshot option
+UserVoice.push(['set', {
+  screenshot_enabled: false
+}])
+
 // Identify the user and pass traits
 // To enable, replace sample data with actual user traits and uncomment the line
 UserVoice.push(['identify', {
