Add thanks after users commit beta testing form.

--- a/beta.html
+++ b/beta.html
@@ -8,5 +8,6 @@ permalink: /beta/
   <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked form-light">
     <input type="email" name="email" class="input mobile-block" placeholder="请填写您的电子邮箱地址，我们将尽快给您回复。">
     <input type="submit" class="button button-blue button-big mobile-block" value="提交">
+    <input type="hidden" name="_next" value="//spiim.com/thanks/" />
   </form>
 </div>
